TEST: add artifact consumer contracts